test/invalid/double_quote_string_unfinished.d
//T error: double_quote_string_unfinished.d:4:11:
//T error: Unexpected string literal termination

string s = "plop
